fix topbar visibility

--- a/src/components/Topbar/Topbar.module.css
+++ b/src/components/Topbar/Topbar.module.css
@@ -12,4 +12,5 @@
   right: 0;
   color: white;
   /* width: 100%; */
+  z-index: 1;
 }
